--- a/1_local_features.ipynb
+++ b/1_local_features.ipynb
@@ -11,9 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[ WARN:0@0.135] global loadsave.cpp:241 findDecoder imread_('data/image3.png'): can't open/read file: check file path/integrity\n",
+      "[ WARN:0@0.136] global loadsave.cpp:241 findDecoder imread_('data/image4.png'): can't open/read file: check file path/integrity\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -24,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +77,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/soonminh/Documents/Hanyang/Classes/[2024-2][대학원] 3차원비전시스템 (3D Vision System)/Assignment/PA1 - Homography/helper.py:19: FutureWarning: `plot_matches` is deprecated since version 0.23 and will be removed in version 0.25. Use `skimage.feature.plot_matched_features` instead.\n",
+      "/mnt/c/Users/Alien07/HYU-2024-Vision-System/helper.py:19: FutureWarning: `plot_matches` is deprecated since version 0.23 and will be removed in version 0.25. Use `skimage.feature.plot_matched_features` instead.\n",
       "  skimage.feature.plot_matches(ax,im1,im2,locs1,locs2,matches,matches_color=color,only_matches=True)\n"
      ]
     },
@@ -102,13 +111,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "89d042ea72804a9992a85da8d824199e",
+       "model_id": "eea555d5d0fb40bebc5240190b3cba0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -171,14 +180,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/soonminh/Documents/Hanyang/Classes/[2024-2][대학원] 3차원비전시스템 (3D Vision System)/Assignment/PA1 - Homography/helper.py:19: FutureWarning: `plot_matches` is deprecated since version 0.23 and will be removed in version 0.25. Use `skimage.feature.plot_matched_features` instead.\n",
+      "/mnt/c/Users/Alien07/HYU-2024-Vision-System/helper.py:19: FutureWarning: `plot_matches` is deprecated since version 0.23 and will be removed in version 0.25. Use `skimage.feature.plot_matched_features` instead.\n",
       "  skimage.feature.plot_matches(ax,im1,im2,locs1,locs2,matches,matches_color=color,only_matches=True)\n"
      ]
     },
@@ -273,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,13 +314,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9bd50b8151b49dba93546d888da0ea0",
+       "model_id": "252d94fa101647fa9431824f5a0c6ef5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -328,7 +337,7 @@
        "Text(0.5, 1.0, 'ORB and Rotations')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -349,11 +358,13 @@
     "\n",
     "for i in trange(36):\n",
     "    # [TODO] Rotate Image\n",
+    "    cv_rotated = cv_cover.rotate(10 * i, expand=True)\n",
     "\n",
     "    # [TODO] Compute features, descriptors and Match features\n",
+    "    matches, locs1, locs2 = matchPicsORB(np.asarray(cv_cover), np.asarray(cv_rotated))\n",
     "\n",
     "    # [TODO] Update histogram\n",
-    "\n",
+    "    match_hist[i] = len(matches)\n",
     "\n",
     "# Display histogram\n",
     "angles = np.arange(0, 360, 10)\n",
@@ -366,14 +377,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/soonminh/Documents/Hanyang/Classes/[2024-2][대학원] 3차원비전시스템 (3D Vision System)/Assignment/PA1 - Homography/helper.py:19: FutureWarning: `plot_matches` is deprecated since version 0.23 and will be removed in version 0.25. Use `skimage.feature.plot_matched_features` instead.\n",
+      "/mnt/c/Users/Alien07/HYU-2024-Vision-System/helper.py:19: FutureWarning: `plot_matches` is deprecated since version 0.23 and will be removed in version 0.25. Use `skimage.feature.plot_matched_features` instead.\n",
       "  skimage.feature.plot_matches(ax,im1,im2,locs1,locs2,matches,matches_color=color,only_matches=True)\n"
      ]
     },
@@ -403,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
