--- a/2_simple_homography.ipynb
+++ b/2_simple_homography.ipynb
@@ -154,15 +154,15 @@
     "        xdi, ydi, wdi = p2[i]\n",
     "\n",
     "        # [TODO] Complete the matrix A\n",
-    "        A[i*2  ,0:3] =\n",
-    "        A[i*2  ,6  ] =\n",
-    "        A[i*2  ,7  ] =\n",
-    "        A[i*2  ,8  ] =\n",
+    "        A[i*2  ,0:3] =  [xsi, ysi, wsi]\n",
+    "        A[i*2  ,6  ] = -xsi*xdi\n",
+    "        A[i*2  ,7  ] = -ysi*xdi\n",
+    "        A[i*2  ,8  ] = -wsi*xdi\n",
     "\n",
-    "        A[i*2+1,3:6] =\n",
-    "        A[i*2+1,6  ] =\n",
-    "        A[i*2+1,7  ] =\n",
-    "        A[i*2+1,8  ] =\n",
+    "        A[i*2+1,3:6] = [xsi, ysi, wsi]\n",
+    "        A[i*2+1,6  ] = -xsi*ydi\n",
+    "        A[i*2+1,7  ] = -ysi*ydi\n",
+    "        A[i*2+1,8  ] = -wsi*ydi\n",
     "\n",
     "    U, S, Vh = np.linalg.svd(A)\n",
     "    h = Vh[-1]\n",
@@ -188,10 +188,14 @@
     "# Apply homography\n",
     "\n",
     "# [TODO] Convert x1 to homogeneous coordinates\n",
+    "x1_h = np.ones((len(x1), 3), 'float64')\n",
+    "x1_h[:,:2] = x1\n",
     "\n",
     "# [TODO] Apply homography\n",
+    "x1_prime_h = np.dot(H, x1_h.T).T \n",
     "\n",
     "# [TODO] Normalize the coordinates\n",
+    "x1_prime = x1_prime_h[:,:2] / x1_prime_h[:,2:]\n",
     "\n",
     "x1_cv = x1.reshape(-1, 1, 2)\n",
     "x1_prime_cv = x1_prime.reshape(-1, 1, 2)\n",
